Upload package to pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = example-package-YOUR-USERNAME-HERE#TODO
+name = alignreg
 version = 1.0
 author = Hanru Yan
 author_email = hanru.yan99@gmail.com
 description = An implementation of the algorithm presented in arXiv:2011.13052
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject#TODO
+url = https://github.com/jyanln/AlignReg
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -17,6 +17,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    tensorflow
+    torch
+    tqdm
 
 [options.packages.find]
 where = src
